2011-03-28  Sam Steingold  <sds@gnu.org>

	fix bug#3182685: socket-connect with timeout non-zero ->ETIMEDOUT
	* socket.d (connect_via_ip): do not reuse "ret" when checking for
	socket errors (fixes patch 2008-06-30)

2011-03-28  Sam Steingold  <sds@gnu.org>

	fix bug#3165405: LOOP mixing WITH & Hash Table FOR
	* loop.lisp (expand-loop): reverse the order of INITFORMS and
	ENDTEST-FORMS in preamble (tweak the 2006-07-20 patch)

2011-03-27  Sam Steingold  <sds@gnu.org>

	fix bug#3243683: (posix:wait) race condition
	* spvw_sigcld.d (sigcld_enabled): static var which counts how many
	times we have enabled SIGCLD
	(sigcld_enabled_lock) [MULTITHREAD]: spinlock for sigcld_enabled
	(install_sigcld_handler) [MULTITHREAD]: init sigcld_enabled_lock
	(begin_want_sigcld, end_want_sigcld): only act if sigcld_enabled==0
	* modules/syscalls/calls.c (BEGIN-SUBPROCESSES, END-SUBPROCESSES): add
	* modules/syscalls/posix.lisp (with-subprocesses): add

2011-03-24  Sam Steingold  <sds@gnu.org>

	Fix bug#3198722: arg warnings despite :ALLOW-OTHER-KEYS T
	* compiler.lisp (test-argument-syntax): report all wrong keys but
	only if :ALLOW-OTHER-KEYS T is not supplied
	(c-DIRECT-FUNCTION-CALL): duplicate and ignored keys are STYLE warnings

2011-03-24  Sam Steingold  <sds@gnu.org>

	* configure.in (AC_REVISION): explicitly call hg instead of using $Id$
	* m4/general.m4, modules/rawsock/configure.in:
	quote AC_LANG_PROGRAM to avoid an autoconf 2.68 warning
	* m4/address.m4, m4/filecharset.m4:
	use AC_LANG_PROGRAM to avoid an autoconf 2.68 warning
	* m4/eloop.m4, m4/param.m4:
	use AC_LANG_SOURCE to avoid an autoconf 2.68 warning

2011-03-23  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (wait, waitpid): remove, these
	functions never worked properly because clisp ignores SIGCLD by
	default; one should be using POSIX:WAIT instead (bug#3224360)

2011-03-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean-modules, check-doc): update for the cvs->hg switch
